--- a/外觀設定.md
+++ b/外觀設定.md
@@ -10,9 +10,9 @@ vim設定
 
 系統字型設定
 ------------
-         在**rc.local (/etc/rc.d/rc.local)**裡，加上**setfont ter-p22b**，儲存離開後，再下**sudo chmod +x /etc/rc.d/rc.local**指令
+         在rc.local (/etc/rc.d/rc.local)裡，加上setfont ter-p22b，儲存離開後，再下sudo chmod +x /etc/rc.d/rc.local指令
          
-         **注意：ter-p22b是某個字型，大小22，要找centos字型，請至/usr/share/fonts/terminus裡**
+         注意：ter-p22b是某個字型，大小22，要找centos字型，請至/usr/share/fonts/terminus裡
         
 參考網址
 -----------
